src/snapshots/arkivisto__config__tests__modification__append_document_type_parsed.snap
---
source: src/config.rs
expression: config
---
output_directory: /tmp/archive
scanners:
  - id: test_scanner
    device_name: "test:scanner:device"
    additional_args: []
    source_adf_single: ~
    source_adf_duplex: ~
    source_flatbed: Flatbed
authors:
  - name: Musterfirma
    include_keywords: []
    exclude_keywords: []
    directory: musterfirma
    pdf_keywords: []
    document_types:
      - name: Invoice
        include_keywords: []
        exclude_keywords: []
        directory: ""
        pdf_title_regex: ~
        pdf_title_pattern: ~
        pdf_date_regex: ~
        pdf_keywords: []
tools:
  ocrmypdf:
    language: eng
