src/snapshots/arkivisto__config__tests__modification__append_document_type_raw.snap
---
source: src/config.rs
expression: config_string
---

outdir = "/tmp/archive"

[[scanners]]
id = "test_scanner"
device_name = "test:scanner:device"
source_flatbed =  "Flatbed" # Scanner source

[[authors]]
# A sample author
name = "Musterfirma"
directory =  "musterfirma" # Author directory

[[authors.document_types]]
name = "Invoice"
include_keywords = []
exclude_keywords = []
directory = ""
pdf_keywords = []
